# jupyter-formily

./: .gitignore  CHANGELOG.md  README.md  build.sh  demo.ipynb  example.ipynb  pyproject.toml  toast_demo.ipynb
.github/workflows/: python-package.yml
ja-fe/: .eslintrc.cjs  index-widget.html  package-lock.json  package.json  tsconfig.node.json  vite-prod.config.ts
ja-fe/src/: App.tsx
ja-fe/src/component/: Button.tsx  FileSelector.css  FileSelector.tsx  FileSelectorForFormily.tsx  Formily.tsx  Input.tsx  Radio.tsx  Select.tsx
ja_fe/: package.json  tsconfig.node.json
ja_fe/scripts/: build.mjs  components.mjs
ja_fe/src/: main-widget.tsx
ja_fe/src/component/: Button.tsx  FileSelector.tsx  Formily.tsx  Input.tsx  Radio.tsx  Select.tsx  _FileSelectorForFormily.tsx
ja_py/: __init__.py  button.py  components.py  file_selector.py  formily.py  input.py  radio.py  select.py
jupyter_formily/: __init__.py  _contant.py  formily.py  toast.py
